<?xml version="1.0"?>
<package format="3">
  <name>learning_node_cpp</name> <!-- 你的ROS 2软件包的名称 -->
  <version>1.0.0</version> <!-- 版本号 -->
  <description>
    ROS 2 C++ Node Example
  </description>
  <maintainer email="zfl@todo.todo"> <!-- 你的维护者信息 -->
    zfl
  </maintainer>
  <license>Apache License 2.0</license> <!-- 许可证信息 -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend> <!-- ROS 2 C++库 -->
  <!-- 添加其他依赖项，如果有的话 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- 添加其他测试依赖项，如果有的话 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
