<?xml version="1.0"?>
<package format="3">
    <name>change_yaml_pkg</name> <!-- 修复了标签 -->
    <version>1.0.0</version>
    <description>
        Test whether changing the yaml parameters in the config through the service will result in parameter changes!
    </description>
    <maintainer email="987@qq.com">ZFL</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>ament_index_cpp</depend>
    <exec_depend>launch</exec_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
